--- a/templates/404.html
+++ b/templates/404.html
@@ -22,7 +22,8 @@
                 
                 const [category, articleId] = parts;
                 const templateUrl = `./${category}.html`; // Load news.html or review.html
-                const jsonUrl = `./compressed/${category}/${articleId}.json`; // Internal path
+
+                const jsonUrl = `https://cdn.jsdelivr.net/gh/kappakodo/content@main/compressed/${category}/${articleId}.json`;
 
                 // Fetch template
                 const templateResponse = await fetch(templateUrl);
